--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<form #userRegForm="ngForm" (ngSubmit)="login(userRegForm)">
+    <div class="container">
+        <h1>Sign In</h1>
+        <hr>
+
+        <div *ngIf="authError">
+            <div class="alert alert-danger">
+                {{ authError?.message }}
+            </div>
+        </div>
+
+        <label for="email"><b>Email</b></label>
+        <input ngModel #email="ngModel" name="email" type="email" class="form-control" required>
+
+        <label for="psw"><b>Password</b></label>
+        <input ngModel #password="ngModel" name="password" type="password" class="form-control" required>
+
+        <div class="clearfix">
+            <button type="button" class="cancelbtn" (click) = "back()">Cancel</button>
+            <button type="submit" class="signupbtn">Sign In</button>
+        </div>
+    </div>
+</form>
