--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -1,33 +1,39 @@
 <form #userRegForm="ngForm" (ngSubmit)="createUser(userRegForm)">
-    <div class="container">
-      <h1>Sign Up</h1>
-      <p>Please fill in this form to create an account.</p>
-      <hr>
-  
-      <label for="email"><b>Email</b></label>
-      <input ngModel #email="ngModel" name="email" type="email" class="form-control" required>
-  
-      <label for="psw"><b>Password</b></label>
-      <input ngModel #password="ngModel" name="password" type="password" class="form-control" required>
-  
-      <label for="psw-repeat"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-  
-      <label for="firstName"><b>First Name</b></label>
-      <input ngModel #firstname="ngModel" name="firstName" type="text" class="form-control" id="firstName" required>
+  <div class="container">
+    <h1>Sign Up</h1>
+    <p>Please fill in this form to create an account.</p>
+    <hr>
 
-      <label for="lastName"><b>Last Name</b></label>
-      <input ngModel #lastname="ngModel" name="lastName" type="text" class="form-control" id="lastName" value="" required>
-
-      <label>
-        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-      </label>
-  
-      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-  
-      <div class="clearfix">
-        <button type="button" class="cancelbtn">Cancel</button>
-        <button type="submit" class="signupbtn">Sign Up</button>
+    <div *ngIf="authError">
+      <div class="alert alert-danger">
+        {{ authError?.message }}
       </div>
     </div>
-  </form>
+
+    <label for="email"><b>Email</b></label>
+    <input ngModel #email="ngModel" name="email" type="email" class="form-control" required>
+
+    <label for="psw"><b>Password</b></label>
+    <input ngModel #password="ngModel" name="password" type="password" class="form-control" required>
+
+    <label for="psw-repeat"><b>Repeat Password</b></label>
+    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+
+    <label for="firstName"><b>First Name</b></label>
+    <input ngModel #firstname="ngModel" name="firstName" type="text" class="form-control" id="firstName" required>
+
+    <label for="lastName"><b>Last Name</b></label>
+    <input ngModel #lastname="ngModel" name="lastName" type="text" class="form-control" id="lastName" value="" required>
+
+    <label>
+      <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+    </label>
+
+    <p>By creating an account you agree to our <a href="https://www.pornhub.com/" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+    <div class="clearfix">
+      <button type="button" class="cancelbtn" (click) = "back()">Cancel</button>
+      <button type="submit" class="signupbtn">Sign Up</button>
+    </div>
+  </div>
+</form>
