--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,26 @@
-<div class="container">
+<div>
     <h1>Home Page</h1>
     <hr>
 
     <div *ngIf="user">
-    <p>Logged in as: {{ user?.email }}</p>
-    <p>Welcome back {{ user?.displayName }} !</p>
+        <p>Logged in as: {{ user?.email }}</p>
+        <p>Welcome back {{ user?.displayName }} !</p>
+
+        <div *ngIf="quest">
+
+            Formular complet
+        </div>
+
+        <div *ngIf="!quest">
+
+            NAI COMPLETAT FORMULARRR
+        </div>
+
+        <button (click)="logout()">Logout</button>
     </div>
 
-    <button class="btn btn-primary mr-2" *ngIf="!user" (click)="register()">Register</button>
-    <button class="btn btn-primary" *ngIf="user" (click)="logout()">Logout</button>
-    <button class="btn btn-primary" *ngIf="!user" (click)="login()">Login</button>
+    <div *ngIf="!user">
+        <button (click)="register()">Register</button>
+        <button (click)="login()">Login</button>
+    </div>
 </div>
