--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -1,6 +1,7 @@
 
 <form ngNativeValidate #userRegForm="ngForm" (ngSubmit)="createUser(userRegForm)">
   <div>
+
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account.</p>
     <hr>
@@ -49,7 +50,7 @@
     </label>
     </div>
 
-    <p class="terms">By creating an account you agree to our <a href="https://www.pornhub.com/" style="color:dodgerblue">Terms & Privacy</a>.</p>
+    <p class="terms">By creating an account you agree to our <a href="" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
     <div>
       <button class = "btn" id = "cancel-btn" type="button" (click) = "back()">Cancel</button>
