--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.min.css"
+@import "~bootstrap/dist/css/bootstrap.min.css";
+body, html {
+	background-image: url('assets/images/heart.png');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	min-height: 100%;
+	min-width: 1024px;
+	width:100%;
+	height:auto;
+	position: fixed;
+	top:0;
+	left:0;
+	margin:0;
+  }
