Added lover list functionality

--- a/src/app/auth/questionnaire/select-gender/select-gender.component.html
+++ b/src/app/auth/questionnaire/select-gender/select-gender.component.html
@@ -1,7 +1,7 @@
 <div class = "all">
     <p> I am interested in... </p>
     <div class="btn-group">   
-        <button class = "btn men" type = "button" routerLink="/womenqs"><a> Men </a></button>
-        <button class = "btn women" type = "button" routerLink="/menqs"><a> Women </a></button>
+        <button class = "btn men" type = "button" (click)="choseMen()"><a> Men </a></button>
+        <button class = "btn women" type = "button" (click)="choseWomen()"><a> Women </a></button>
     </div>
 </div>
