--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -29,25 +29,30 @@
     </div>
 
     <div class="form-group">
-    <label for="psw"><b>Password</b></label>
-    <input ngModel #password="ngModel" placeholder="Enter your Password" name="password" type="password" required style="width: 300px"/>
+      <label for="psw"><b>Password</b></label>
+      <input ngModel #password="ngModel" placeholder="Enter your Password" name="password" type="password" required style="width: 300px"/>
     </div>
 
     <div class="form-group">
-    <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat your Password" name="psw-repeat" required style="width: 300px"/>
+      <label for="psw-repeat"><b>Repeat Password</b></label>
+      <input type="password" placeholder="Repeat your Password" name="psw-repeat" required style="width: 300px"/>
+    </div>
+
+    <div style="margin-bottom:15px">
+      <input type="radio" name="gender" value="male" ngModel #gender = "ngModel"> Male
+      <input type="radio" name="gender" value="female" ngModel #gender = "ngModel"> Female
     </div>
 
     <div>
-    <label class="check-btn">
-    Remember me <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> 
-    </label>
+      <label class="check-btn">
+      Remember me <input type="checkbox" name="remember" style="margin-bottom:15px"> 
+      </label>
     </div>
 
     <div>
-    <label class="check-btn">
-    I am over 18 years old <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> 
-    </label>
+      <label class="check-btn">
+      I am over 18 years old <input type="checkbox" name="remember" style="margin-bottom:15px"> 
+      </label>
     </div>
 
     <p class="terms">By creating an account you agree to our <a href="" style="color:dodgerblue">Terms & Privacy</a>.</p>
