--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -51,3 +51,23 @@
   .btn-group .btn:hover {
     background-color: #ff009d;
   }
+
+  .container {
+    border: 2px solid #dedede;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+    word-break: break-all;
+  }
+
+  .time-right {
+    float: right;
+    color: #aaa;
+  }
+
+  .container::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
