--- a/src/styles.css
+++ b/src/styles.css
@@ -4,13 +4,10 @@ body, html {
 	background-image: url('assets/images/heart.png');
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: cover;
-	min-height: 100%;
-	min-width: 1024px;
+	background-size: 100%;
 	width:100%;
-	height:auto;
+	height:100%;
 	position: fixed;
 	top:0;
 	left:0;
-	margin:0;
   }
