--- a/src/app/auth/questionnaire/men-qs/men-qs.component.html
+++ b/src/app/auth/questionnaire/men-qs/men-qs.component.html
@@ -1,6 +1,6 @@
 <form ngNativeValidate (ngSubmit)="submit()">
     <div>
-        <h1>Answer these questions</h1>
+        <h1>Tell us what you like</h1>
         <hr>
 
         <div *ngIf="authError">
